Structure and One smoke test

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha",
     "watch": "mocha --watch",
-    "smoke": "mocha --recursive"
+    "smoke": "mocha test/smoke --recursive",
+    "acceptance": "mocha test/acceptance --recursive"
   },
   "repository": {
     "type": "git",
