Services smoke tests

--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,10 @@
   "username": "Admin",
   "password": "Slayer777",
 
+  "serviceUsername" : "Administrator",
+  "servicePassword":"Slayer777",
+  "hostname":"at02guvi02lab.gualy.lab.local",
+
   "logger": {
     "appenders": [
       { "type": "file", "filename": "room-manager-auto.log", "category": "project"},
