--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonfile": "^2.4.0",
     "log4js": "^1.1.0",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
     "superagent": "^3.4.1",
     "superagent-proxy": "^1.0.2",
     "xunit-file": "^1.0.0"
