--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Create a new framework",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
-    "watch": "mocha --watch",
+    "test": "mocha --recursive",
+    "watch": "mocha --watch --recursive",
     "smoke": "mocha test/smoke",
-    "acceptance": "mocha test/acceptance --recursive"
-  },
+    "acceptance": "mocha test/acceptance --recursive",
+    "bdt" : "mocha test/bdt --recursive"
+   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JFVF/AT02-GROUP01.git"
@@ -24,6 +25,7 @@
     "jsonfile": "^2.4.0",
     "log4js": "^1.1.0",
     "mocha": "^3.2.0",
+    "moment": "^2.17.1",
     "superagent": "^3.4.1",
     "superagent-proxy": "^1.0.2",
     "xunit-file": "^1.0.0"
