--- a/config/config.json
+++ b/config/config.json
@@ -10,18 +10,12 @@
   "serviceVersion": "14.3.123",
   "timeout": 3000,
   "StatusOK": 200,
+  "startTime": 270,
+  "endTime": 271,
   "logger": {
     "appenders": [
-      {
-        "type": "file",
-        "filename": "room-manager-auto.log",
-        "category": "project"
-      },
-      {
-        "type": "file",
-        "filename": "room-manager-auto.log",
-        "category": "item"
-      }
+      { "type": "file", "filename": "room-manager-auto.log", "category": "meetings"},
+      { "type": "file", "filename": "room-manager-auto.log", "category": "out-of-service"}
     ]
   }
 }
